sap-successfactors/3.1/modules/ROOT/pages/sap-successfactors-connector-reference.adoc
= SAP SuccessFactors Connector Reference - Mule 4
:page-aliases: connectors::sap/sap-successfactors-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

SAP SuccessFactors Connector v3.1

Anypoint Connector for SAP SuccessFactors (SuccessFactors Connector) provides full support to query, create, update, and delete entities using the ODATA API exposed by SuccessFactors.

Release Notes: xref:release-notes::connector/sap-successfactors-connector-release-notes-mule-4.adoc[SAP SuccessFactors Connector Release Notes]

[[config]]
== Default Configuration

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | |x
| Connection a| <<config_basic, Basic Authentication>>
 | The connection types that can be provided to this configuration. | |x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime only purges instances as needed. |  |
|===

[[config_basic]]
== Basic Authentication Connection Type

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Proxy Configuration a| One of:

* <<Default>>
* <<NTLM>> |  |  |
| Data Center's EndPoint URL a| String |  Data Center's EndPoint URL |  |x
| Use Persistent Connections a| Boolean |  If false, each connection will be closed after the first request is completed. |  true |
| Max Connections a| Number |  The maximum number of outbound connections to keep open at the same time. By default the number of connections is unlimited. |  -1 |
| Connection Idle Timeout a| Number |  The number of milliseconds that a connection can remain idle before it is closed. The value of this attribute is only used when persistent connections are enabled. |  30000 |
| Stream Response a| Boolean |  Whether or not received responses should be streamed, meaning processing will continue as soon as all headers are parsed and the body streamed as it arrives. When enabled, the response MUST be eventually read since depending on the configured buffer size it may not fit into memory and processing stops until space is available. |  false |
| Response Buffer Size a| Number |  The space in bytes for the buffer where the HTTP response is stored. |  -1 |
| Connection Timeout a| Number |  |  30000 |
| Company ID a| String |  The Company ID |  |x
| User Name a| String |  The user name |  |x
| Password a| String |  The password |  |x
| Enable Session Reuse a| Boolean |  Boolean to enable Session Reuse feature. By default, it is false. |  false |
| TLS Configuration a| <<TLS>> |  Protocol to use for communication. Valid values are HTTP and HTTPS. Default value is HTTP. When using HTTPS the HTTP communication is going to be secured using TLS / SSL. If HTTPS was configured as protocol then the user needs to configure at least the keystore in the tls:context child element of this listener-config. |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
|===

== Associated Operations

* <<createEntity>>
* <<deleteEntity>>
* <<getEntityById>>
* <<query>>
* <<update>>

[[createEntity]]
== Create Entity

`<successfactors:create-entity>`


Creates a new Entity Create Operation.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Entity Set Name a| String |  The entity set name to which the created entity is part of |  |x
| Properties a| Object |  The properties of the entity |  #[payload] |
| Target Variable a| String |  The name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and to store the outcome of that expression in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| Type | Object
|===

=== For Configurations

* <<config>>

=== Throws

* SUCCESSFACTORS:BadRequestException
* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:META_DATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:OPERATION_FAILED
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:UNAUTHORIZED
* SUCCESSFACTORS:UNKNOWN
* SUCCESSFACTORS:VALIDATION


[[deleteEntity]]
== Delete Entity

`<successfactors:delete-entity>`


This operation deletes the entry for a given entity.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Entity Set Name a| String |  The name of the entity. |  |x
| Key Properties a| Object |  #[payload] |  |x
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===



=== For Configurations

* <<config>>

=== Throws

* SUCCESSFACTORS:BadRequestException
* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:META_DATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:OPERATION_FAILED
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:UNAUTHORIZED
* SUCCESSFACTORS:UNKNOWN
* SUCCESSFACTORS:VALIDATION


[[getEntityById]]
== Get Entity By ID

`<successfactors:get-entity-by-id>`


Retrieves an Entity Composing the OData URI.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Entity Set Name a| String |  The entity set name to search for using the entity with the given key. |  |x
| Key Properties a| Object  |  #[payload] |  |x
| Target Variable a| String |  The name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and to store the outcome of that expression in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| Type | Object
|===

=== For Configurations

* <<config>>

=== Throws

* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:RETRY_EXHAUSTED


[[query]]
== Query

`<successfactors:query>`

Queries entities of a determined type.

=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Entity Set Name a| String |  The type of entity to list. |  |x
| Filter a| One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  |
| Order By Values a| Array of <<OrderByValue>> |  |  |
| Page Size a| Number |  |  100 |
| Top a| Number |  |  |
| Skip a| Number |  |  |
| Streaming Strategy a| * <<repeatable-in-memory-iterable>>
* <<repeatable-file-store-iterable>>
* non-repeatable-iterable |  Configure to use repeatable streams. |  |
| Target Variable a| String |  The name of a variable in which to place the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and to store the outcome of that expression in the target variable. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== Output

[%autowidth.spread]
|===
| Type | Array of Object
|===

=== For Configurations

* <<config>>



[[update]]
== Update

`<successfactors:update>`


This operation replaces the existing data in an entity, so all property values in the Entity either take the values provided in the request body or are reset to their default value if no data is provided in the request.


=== Parameters

[%header%autowidth.spread]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | |x
| Entity Set Name a| String |  The type of entity being updated. This value is dinamically loaded from SuccessFactors OData description file.|  |x
| Properties a| Object |  The properties that will be present on the new entity. These properties should contain the key of the entity. |  #[payload] |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

=== For Configurations

* <<config>>

=== Throws

* SUCCESSFACTORS:BadRequestException
* SUCCESSFACTORS:CONNECTIVITY
* SUCCESSFACTORS:INVALID_PAGE_SIZE
* SUCCESSFACTORS:META_DATA_ERROR
* SUCCESSFACTORS:NOT_FOUND
* SUCCESSFACTORS:OPERATION_FAILED
* SUCCESSFACTORS:PARSE_ERROR
* SUCCESSFACTORS:RETRY_EXHAUSTED
* SUCCESSFACTORS:UNAUTHORIZED
* SUCCESSFACTORS:UNKNOWN
* SUCCESSFACTORS:VALIDATION



== Types
[[Tls]]
== TLS

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> |  |  |
| Key Store a| <<KeyStore>> |  |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> |  |  |
|===

[[TrustStore]]
== Trust Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location to resolve relative to the current classpath and file system (if possible) of the trust store. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If true, no certificate validations are performed, rendering connections vulnerable to attacks. Use at your own risk. |  |
|===

[[KeyStore]]
== Key Store

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The location to resolve relative to the current classpath and file system (if possible) of the key store. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | When the key store contains many private keys, this attribute indicates the alias of the key that should be used. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|===

[[standard-revocation-check]]
== Standard Revocation Check

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method (the one not selected before). |  |
| Soft Fail a| Boolean | Avoid verification failure when the revocation server can not be reached or is busy. |  |
|===

[[custom-ocsp-responder]]
== Custom OCSP Responder

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | Alias of the signing certificate for the OCSP response (must be in the trust store), if present. |  |
|===

[[crl-file]]
== CRL File

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|===

[[Reconnection]]
== Reconnection

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | The number of reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
== Expiration Policy

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the maxIdleTime attribute |  |
|===

[[OrderByValue]]
== Order By Value

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Order Type a| Enumeration, one of:

** ASCENDING
** DESCENDING |  |  |
| Property a| String |  |  |
|===

[[repeatable-in-memory-iterable]]
== Repeatable In Memory Iterable

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Initial Buffer Size a| Number | This is the amount of instances to initially allow to be kept in memory to consume the stream and provide random access to it. If the stream contains more data than can fit into this buffer, then the buffer expands according to the bufferSizeIncrement attribute, with an upper limit of maxInMemorySize. Default value is 100 instances. |  |
| Buffer Size Increment a| Number | This is by how much the buffer size expands if it exceeds its initial size. Setting a value of zero or lower means that the buffer should not expand and that to raise a STREAM_MAXIMUM_SIZE_EXCEEDED error when the buffer gets full. Default value is 100 instances. |  |
| Max Buffer Size a| Number | This is the maximum amount of memory to use. If more than that is used then raise a STREAM_MAXIMUM_SIZE_EXCEEDED error. A value lower or equal to zero means no limit. |  |
|===

[[repeatable-file-store-iterable]]
== Repeatable File Store Iterable

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Max In Memory Size a| Number | This is the maximum amount of instances to keep in memory. If more than that is required, then it starts to buffer the content on disk. |  |
| Buffer Unit a| Enumeration, one of:

** BYTE
** KB
** MB
** GB | The unit in which maxInMemorySize is expressed |  |
|===

[[Default]]
== Default

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Host a| String | Host where the proxy requests are sent. |  | x
| Port a| Number | Port where the proxy requests are sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  |
| Password a| String | The password to authenticate against the proxy. |  |
| Non Proxy Hosts a| String | A list of comma separated hosts against which the proxy should not be used. |  |
|===

[[NTLM]]
== NTLM

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Ntlm Domain a| String | The domain to authenticate against the proxy. |  | x
| Host a| String | Host where the proxy requests are sent. |  | x
| Port a| Number | Port where the proxy requests are sent. |  | x
| Username a| String | The username to authenticate against the proxy. |  |
| Password a| String | The password to authenticate against the proxy. |  |
| Non Proxy Hosts a| String | A list of comma separated hosts against which the proxy should not be used. |  |
|===

[[Addition]]
== Addition

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[Division]]
== Division

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[Module]]
== Module

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[Multiplication]]
== Multiplication

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[Subtraction]]
== Subtraction

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[In]]
== In

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[Like]]
== Like

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[QueryValue]]
== Query Value

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Value a| String |  |  |
|===

[[And]]
== And

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Operators a| Array of One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  | x
|===

[[EqualTo]]
== Equal To

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Compared Value a| String |  |  | x
| Field Name a| String |  |  | x
|===

[[GreaterThan]]
== Greater Than

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Compared Value a| String |  |  | x
| Field Name a| String |  |  | x
|===

[[LesserThan]]
== Lesser Than

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Compared Value a| String |  |  | x
| Field Name a| String |  |  | x
|===

[[Not]]
== Not

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Negative a| One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  | x
|===

[[Or]]
== Or

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Operators a| Array of One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  | x
|===

[[Grouping]]
== Grouping

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Operator a| One of:

* <<Addition>>
* <<And>>
* <<Division>>
* <<EndsWith>>
* <<EqualTo>>
* <<GreaterThan>>
* <<Grouping>>
* <<In>>
* <<LesserThan>>
* <<Like>>
* <<Module>>
* <<Multiplication>>
* <<Not>>
* <<Or>>
* <<QueryValue>>
* <<StartsWith>>
* <<Subtraction>>
* <<ToLowercase>>
* <<ToUppercase>>
* <<Trim>>
|  |  | x
| Field Name a| String |  |  | x
|===

[[EndsWith]]
== Ends With

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Value a| String |  |  | x
| Field Name a| String |  |  | x
|===

[[StartsWith]]
== Starts With

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Value a| String |  |  | x
| Field Name a| String |  |  | x
|===

[[ToLowercase]]
== To Lowercase

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[ToUppercase]]
== To Uppercase

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

[[Trim]]
== Trim

[%header%autowidth.spread]
|===
| Field | Type | Description | Default Value | Required
| Field Name a| String |  |  | x
|===

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
